# ChangeLog for dev-python/pymongo
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pymongo/ChangeLog,v 1.37 2014/04/08 14:57:23 ultrabug Exp $

*pymongo-2.7 (08 Apr 2014)

  08 Apr 2014; Ultrabug <ultrabug@gentoo.org> +pymongo-2.7.ebuild:
  version bump

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> pymongo-2.5.2.ebuild,
  pymongo-2.6.2.ebuild, pymongo-2.6.3.ebuild:
  Add support for the new PyPy slotting.

  07 Dec 2013; Pacho Ramos <pacho@gentoo.org> pymongo-2.6.3.ebuild:
  x86 stable, bug #488742

  29 Nov 2013; Pacho Ramos <pacho@gentoo.org> pymongo-2.6.3.ebuild:
  amd64 stable, bug #488738

  16 Nov 2013; Pacho Ramos <pacho@gentoo.org> pymongo-2.6.3.ebuild:
  amd64 stable, bug #488742

*pymongo-2.6.3 (17 Oct 2013)

  17 Oct 2013; Ultrabug <ultrabug@gentoo.org> -pymongo-2.6.1.ebuild,
  +pymongo-2.6.3.ebuild:
  version bump, drop old

*pymongo-2.6.2 (09 Sep 2013)

  09 Sep 2013; Ultrabug <ultrabug@gentoo.org> +pymongo-2.6.2.ebuild:
  version bump

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> pymongo-2.5.2.ebuild,
  pymongo-2.6.1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*pymongo-2.6.1 (05 Sep 2013)

  05 Sep 2013; Ultrabug <ultrabug@gentoo.org> -pymongo-2.6.ebuild,
  +pymongo-2.6.1.ebuild:
  version bump, drop bugged

*pymongo-2.6 (21 Aug 2013)

  21 Aug 2013; Ultrabug <ultrabug@gentoo.org> -pymongo-2.4.2-r1.ebuild,
  +pymongo-2.6.ebuild:
  version bump, drop old

*pymongo-2.5.2 (02 Jun 2013)

  02 Jun 2013; Ultrabug <ultrabug@gentoo.org> -pymongo-2.3.ebuild,
  -pymongo-2.5.ebuild, -pymongo-2.5.1.ebuild, +pymongo-2.5.2.ebuild:
  fix #472046 wrt #472034, drop old

  28 May 2013; Ian Delaney <idella4@gentoo.org>
  +files/pymongo-2.5.1-greenlet.patch, pymongo-2.5.1.ebuild, pymongo-2.5.ebuild:
  patch to fix test in py2

  27 May 2013; Ian Delaney <idella4@gentoo.org> pymongo-2.5.1.ebuild,
  pymongo-2.5.ebuild: