@@ -3,19 +3,17 @@ Hash: SHA256
 
 AUX pymongo-2.5.1-greenlet.patch 673 SHA256 c3a0822fbb8892288bda09e0ab54a88d0d5da7aba4f641b64b930e5e790a1fee SHA512 6605a29a483d700fe8a41f3e70a6df41c0e28098e5e9d5b3e74cbbedfc570bbb38bd12e98a588f2aa1bafacf9c02e7ec8a408a67c9312e322eac74b0b39b09b6 WHIRLPOOL 110a664739851b54621cb588e1b5e4a37fe50bb0e583dccd04f58971f55467ccb652f9105eda234098ecade7cb6b0e8af0fa86255089cd4b403ddee62aa83d50
 DIST pymongo-2.5.2.tar.gz 303234 SHA256 84ac1da67d0dabc711fa8259324d4e94b26a85411bcf0c12dc80a427d9f93ecc SHA512 6137bfcd60776b819a4ca4eb09ba3058a62696ab3533646c5f735ec4d336aa888cf0b8b1975acf1522bbd04416ff4337bf8481a0506421730dfdf712232c75c7 WHIRLPOOL 65c9ef69dd75af13ec7e05e77d2f9afc19c32723901bdf28488121770f53dec340721cb6e891d8cd9009547d95957f61dbf9bef72e725f79bcab38a41d94fba7
-DIST pymongo-2.6.2.tar.gz 322913 SHA256 091d584f7b5d8de60bf6152d9269ec9a29ae7fa34415862b2f092af393233c4e SHA512 786119c788d716bb78a2e40f4a98f1d9be2e5945162ea7b24b5b39535872ba509f75aaeff535ba9cdc483147a4498ffbdf0d483a78464c6075b76bc0816a0cf1 WHIRLPOOL afac43b7d567ab3a629aad3a26ffb5583a1d1a12e4477f6826992ee71431e1947591918895f0dcf0ec48c261c583823534f1e0d1c31746d1651bb273b0f75617
 DIST pymongo-2.6.3.tar.gz 324241 SHA256 cabe1d785ad5db6ed8ff70dcb9c987958fc75400f066ec78911ca3f37184a4e2 SHA512 6da3cbf035b52379c24df37b76e1eb743b12c1026116e28e4e7b6450e2674d730f9c8c2dd85f352c6ee4c9f604decaffc2dbc57fe64268bd7522d8ce155cca9e WHIRLPOOL ac36dd88c4311237ecda66a6008fa0d89d0670e331df6c49a08a1d3bc4ddcafe72e8e003009c206d3ac12afb1b14afe2d3615834a5a8df5ce30442f7b49fdbf2
 DIST pymongo-2.7.tar.gz 376543 SHA256 8320bbbb8ca76de86bd47c253cfbfc4aedae3439fc57f6a9f8fdfa15a00bd601 SHA512 da7d10d9d413ecaac92888ebdec05247992586c5a2432770083a704805e17816788a71aa0f25d5cddebd98320a1c8f5f46b59f1c4b1ff9590454bf894510b387 WHIRLPOOL 520ff0501edf47204d9c61e229dba825c29a1ff8238d8555891638adf5e37f94220eca554f7082c1b196f6c97823d19fb174f5fff7816284fa56d4a610001ed7
 EBUILD pymongo-2.5.2.ebuild 3314 SHA256 410867d2903199249666672d78e863833facde59c50391e6f7c7c61d924e9eb4 SHA512 2ba16b5b984fa4fce89ccd7db1bcd21abc1c4e4b207623e73bc42c104f203ceffb4b8f45222ca648297e76dd752eaedc611c6ba9b24c4b65de96add33402fa54 WHIRLPOOL 3aa8d0a8775c37dc722bc84567ce9e316446153b2795270d979417794bd2b3904543f3f0f9d4dd0f0a1af1891f6533c322d8db32317d0cf748794a1a1ae91c68
-EBUILD pymongo-2.6.2.ebuild 3260 SHA256 91a0859214e9977083821f0315cb377d693f5884edafb2641fec99247cb79afa SHA512 dfd27b3a92fa9fc7da29de4f9d8d7174fff4f82353a0af4fc16631a4a9560a6b982429f38570e765ec2630e9946cde114770988d7ee64d66008a68f15d56e9f0 WHIRLPOOL 6b91adc7fac53891437cfa8a4877e4b134540cb011656441428b834769ff9d97f680e622b19ebd3727df3a65b6c744a6ea6028af2b51c2b01eedc2d2898ef6ce
 EBUILD pymongo-2.6.3.ebuild 3258 SHA256 31395fbb9dc4439f9447cca476684a0a23acc27533a0fb146915766f9b1a753e SHA512 f641529858323e125fc6d0516b21202d1bc463bfd93319b97f6c2317a5215488794e36eaf37d577acc946a9288ece12aad4da4656d0acd374c1dac365f3ef495 WHIRLPOOL 3d2b588bde1521345104416a9a5a68c3aacc71a5ac0c0ad8ece88c5366a306176fafe89e91c1d16691f2a882a0698304afcb2aea18c74655149eb6f0b2ef3f6a
-EBUILD pymongo-2.7.ebuild 3260 SHA256 c8a01b9429be812ee7b0d82cc94abee03a834a56b422437dac36dbffeee3bf89 SHA512 406204adb27ec4ec00fb18acbd9d30c379697896e91618991da9aa7590c0cb9f71750977e072c25a915d1afb3181f297a0b74327babd4c21b45a7559b419e7a3 WHIRLPOOL 144796ef968f7ad1582481502a9b5db5d221fff1ff4109a8b8081976c08501c15dc8a946a5f5187a217f2f4b80e774db376c7d3cf63ef771cd9a11bccfc26dfc
-MISC ChangeLog 5717 SHA256 29b047b21543a2b4a257fe91f2ef73dba6f4a1b52a0c93251d6d65b46245d15a SHA512 4a7ebf6c0b86d63cb7b0bf42415c849056e5e26ecb3affc276db52d8b2617db7ae8b30eaee3f7d7b23ac0dcfe444a69b26f2a34ba51f9dda2de9cb5874421ebf WHIRLPOOL af9c58f702726b62d7d201ae22b1bf40f0ed697b496295a1b5376347ac2b9a534a7c2cd24d911e1f0d57d03200cb83294935a55bf54e418821b6ae693a6b3bec
+EBUILD pymongo-2.7-r1.ebuild 2960 SHA256 9f95ba437dc81ae849575a6f06ad5420d724a09f8e897c36aed5b1629f03be54 SHA512 8fdf6251a89757721d03d7453f4c0c530f9d23538cb287d0a68693ae1613fe1ce312ad1415f0e5e0d91e709046fa0039617e028b88a184c7f2dcd30ef9b4a36e WHIRLPOOL 2db5ea6a9580b442f3b96eb7f1e363e2e9478b963f972f3a53e132f244f2fb5a55af087c0182c4c386da906ef477508cd9cf6497a183477ef71833e043287386
+MISC ChangeLog 5932 SHA256 f23724e102659b6b2e23ded83284bedfbd0ace7124de6cfa4f6cd69f7400e99b SHA512 ccfe34a31f544d02febe5e4521b06d47c469d3187de5e842c9ea2c1ca531cca5a6fe6606eb35a4dc78a18eb332cdb0e0ca31ff1a8a99816b4a7c3b84889bef65 WHIRLPOOL 9f2e5eb368b56efd9a231dfa484f0dac7cdfc7762d8c5abf20b4065a21983beb72d14f16526cca77befb3f1f55b0c23b887bfcbfcff903b707368a08ce8656cc
 MISC metadata.xml 938 SHA256 727efde10e259e145e89f23269b52226b658ca5636f45997ab3450a623afe930 SHA512 8dba1e47b077267bda609ffd22b7526f7019c489722f7bfe32b47a24974756f531efa0258e65f2b45223cb7f1dc4d29489b5437c5d871cb0fa39de4c053377bb WHIRLPOOL c2bbf2195c841e2c0501801aa8c171fce707539dece8eba5e61e6edfdb5a5d5d11b1f7df54c7ff73493dcb3c821f52288d3aef8e6bdd9616a46218af5c25ca72
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlNEDlsACgkQKiQSS7ZY+hNcqgD9Gab5fdz8AHEmuSRBr4ZQxhl6
-BxosMaY4ZXcwNQPiFFsA/1Sl4eFWvOSIGQ+yXb9g5Zr88z+tDIUHLHrIwJhMdixd
-=AIjL
+iF4EAREIAAYFAlNNTb8ACgkQKiQSS7ZY+hNUDAEA0fCy9VofoNN3H6bk70NnYBZS
+RG9sZ9gUV2xLaPHqVW0A/R2CFniP5rrGhbTP5PwmmYA1C69/x9IfoJqgt82N8lDA
+=03A+
 -----END PGP SIGNATURE-----
