@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/pymongo
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pymongo/ChangeLog,v 1.37 2014/04/08 14:57:23 ultrabug Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pymongo/ChangeLog,v 1.38 2014/04/15 15:18:18 ultrabug Exp $
+
+*pymongo-2.7-r1 (15 Apr 2014)
+
+  15 Apr 2014; Ultrabug <ultrabug@gentoo.org> -pymongo-2.6.2.ebuild,
+  -pymongo-2.7.ebuild, +pymongo-2.7-r1.ebuild:
+  revbump fix #507360 thx to @Lujeni and Bernie Hackett, drop old.
 
 *pymongo-2.7 (08 Apr 2014)
 
